Implemet email digets delivery with unsubscribe